--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
   "name": "UC Grabber",
-  "version": "extension 1.0",
+  "version": "0.1",
 
   "default_locale": "en",
   "description": "A plain text description",
