change file popup

--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
   "manifest_version": 2,
-  "name": "UC Grabber",
+  "name": "My extension app",
   "version": "0.1",
 
   "browser_action": {
     "default_icon": "images/icon.png",
-    "default_popup": "html/popup.html",
+    "default_popup": "my-app/src/App.js",
     "default_title": "Zigot state chrome app"
   }
 }
