--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
 
   "browser_action": {
     "default_icon": "images/icon.png",
-    "default_popup": "my-app/src/App.js",
+    "default_popup": "body/index.html",
     "default_title": "Zigot state chrome app"
   }
 }
